# download_gog_galaxy

./: Cargo.toml  README.md
src/: main.rs
src/configuration/: mod.rs
src/models/: mod.rs
src/utils/: mod.rs
