[package]
name = "download_gog_galaxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest ={ version = "0", features = ["blocking", "json"]}
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0"
md-5 = {version = "0"}